src/test/deca/context/invalid/provided/testNomCLass.deca
//Resultats :
//Erreur contextuelle
//Ligne 7 : A is already defined
class A{
int x;
}
class A{
int y;
}
